--- a/Loss function.ipynb
+++ b/Loss function.ipynb
@@ -18,7 +18,7 @@
     "### L1 Loss function\n",
     "It is used to minimize the error which is the sum of all the absolute differences in between the true value and the predicted value.\n",
     "\n",
-    "<img src=\".\\Images\\img13.png\">\n",
+    "<img src=\".\\Images\img13.png\">\n",
     "\n",
     "### L2 Loss Function\n",
     "It is also used to minimize the error which is the sum of all the squared differences in between the true value and the pedicted value.\n",
