--- a/Loss function.ipynb
+++ b/Loss function.ipynb
@@ -23,7 +23,7 @@
     "### L2 Loss Function\n",
     "It is also used to minimize the error which is the sum of all the squared differences in between the true value and the pedicted value.\n",
     "\n",
-    "<img src=\".\\Images\\img15.png\">\n",
+    "![alt](Images/img15.png)\n",
     "\n",
     "**The disadvantage** of the **L2 norm** is that when there are outliers, these points will account for the main component of the loss. For example, the true value is 1, the prediction is 10 times, the prediction value is 1000 once, and the prediction value of the other times is about 1, obviously the loss value is mainly dominated by 1000."
    ]
