--- a/Loss function.ipynb
+++ b/Loss function.ipynb
@@ -18,7 +18,7 @@
     "### L1 Loss function\n",
     "It is used to minimize the error which is the sum of all the absolute differences in between the true value and the predicted value.\n",
     "\n",
-    "<img src=\".\\Images\\img13.png\">\n",
+    "![alt](Images/img13.png)\n",
     "\n",
     "### L2 Loss Function\n",
     "It is also used to minimize the error which is the sum of all the squared differences in between the true value and the pedicted value.\n",
@@ -94,7 +94,7 @@
     "\n",
     "Huber Loss is often used in regression problems. Compared with L2 loss, Huber Loss is less sensitive to outliers(because if the residual is too large, it is a piecewise function, loss is a linear function of the residual).\n",
     "\n",
-    "<img src=\".\\Images\\img1.png\">\n",
+    "![alt](Images/img1.png)\n",
     "\n",
     "Among them, $\\delta$ is a set parameter, $y$ represents the real value, and $f(x)$ represents the predicted value.\n",
     "\n",
@@ -104,11 +104,11 @@
     "\n",
     "A smooth approximation of Huber loss to ensure that each order is differentiable.\n",
     "\n",
-    "<img src=\".\\Images\\img2.png\">\n",
+    "![alt](Images/img2.png)\n",
     "\n",
     "Where $\\delta$ is the set parameter, the larger the value, the steeper the linear part on both sides.\n",
     "\n",
-    "<img src=\".\\Images\\img3.png\">\n",
+    "![alt](Images/img3.png)\n",
     "\n",
     "## 3.Hinge Loss\n",
     "\n",
@@ -116,7 +116,7 @@
     "\n",
     "In the svm classifier, the definition of hinge loss is\n",
     "\n",
-    "<img src=\".\\Images\\img4.png\">\n",
+    "![alt](Images/img4.png)\n",
     "\n",
     "In other words, the closer the y is to t, the smaller the loss will be."
    ]
@@ -155,17 +155,17 @@
    "source": [
     "## 4.Cross-entropy loss\n",
     "\n",
-    "<img src=\".\\Images\\img7.png\">\n",
+    "![alt](Images/img7.png)\n",
     "\n",
     "The above is mainly to say that cross-entropy loss is mainly applied to binary classification problems. The predicted value is a probability value and the loss is defined according to the cross entropy. Note the value range of the above value: the predicted value of y should be a probability and the value range is [0,1]\n",
     "\n",
-    "<img src=\".\\Images\\img8.png\">\n",
+    "![alt](Images/img8.png)\n",
     "\n",
     "## 5.Sigmoid-Cross-entropy loss\n",
     "\n",
     "The above cross-entropy loss requires that the predicted value is a probability. Generally, we calculate $scores = x*w + b$. Entering this value into the sigmoid function can compress the value range to (0,1).\n",
     "\n",
-    "<img src=\".\\Images\\img9.png\">\n",
+    "![alt](Images/img9.png)\n",
     "\n",
     "It can be seen that the sigmoid function smoothes the predicted value(such as directly inputting 0.1 and 0.01 and inputting 0.1, 0.01 sigmoid and then entering, the latter will obviously have a much smaller change value), which makes the predicted value of sigmoid-ce far from the label loss growth is not so steep.\n",
     "\n",
@@ -173,7 +173,7 @@
     "\n",
     "First, the softmax function can convert a set of fraction vectors into corresponding probability vectors. Here is the definition of softmax function\n",
     "\n",
-    "<img src=\".\\Images\\img10.png\">\n",
+    "![alt](Images/img10.png)\n",
     "\n",
     "As above, softmax also implements a vector of 'squashes' k-dimensional real value to the [0,1] range of k-dimensional, while ensuring that the cumulative sum is 1.\n",
     "\n",
@@ -181,7 +181,7 @@
     "\n",
     "According to the definition of cross entropy loss.\n",
     "\n",
-    "<img src=\".\\Images\\img11.png\">\n",
+    "![alt](Images/img11.png)\n",
     "\n",
     "where $p(x)$ represents the probability that classification $x$ is a correct classification, and the value of $p$ can only be 0 or 1. This is the prior value\n",
     "\n",
@@ -193,7 +193,7 @@
     "\n",
     "Here is the definition of softmax-cross-entropy-loss.\n",
     "\n",
-    "<img src=\".\\Images\\img12.png\">\n",
+    "![alt](Images/img12.png)\n",
     "\n",
     "Where $f_j$ is the score of all possible categories, and $f_{y_i}$ is the score of ground true class"
    ]
