Fixed some images not rendering in the file.

--- a/Activation Functions.ipynb
+++ b/Activation Functions.ipynb
@@ -185,11 +185,11 @@
    "source": [
     "### 7.  PRelu (Parametric ReLU)\n",
     "\n",
-    "![alt](img/CAPTURE.png)\n",
+    "![alt](img/Capture.png)\n",
     "\n",
     "PReLU is also an improved version of ReLU. In the negative region, PReLU has a small slope, which can also avoid the problem of ReLU death. Compared to ELU, PReLU is a linear operation in the negative region. Although the slope is small, it does not tend to 0, which is a certain advantage.\n",
     "\n",
-    "![alt](img/CAPTURE1.png)\n",
+    "![alt](img/Capture1.png)\n",
     "\n",
     "We look at the formula of PReLU. The parameter α is generally a number between 0 and 1, and it is generally relatively small, such as a few zeros. When α = 0.01, we call PReLU as Leaky Relu , it is regarded as a special case PReLU it.\n",
     "\n",
